# Project-JARVIS

./: .env.example  .gitignore  LICENSE  Product Requirements Document (PRD).txt  README.md  SETUP.md  pyproject.toml
jarvis/: __init__.py  config.py  main.py
jarvis/agents/: __init__.py  browser_agent.py  chat_agent.py  os_agent.py
jarvis/brain/: __init__.py  prompts.py  state.py  supervisor.py
jarvis/dashboard/: __init__.py  pill.py  server.py
jarvis/dashboard/static/: index.html
jarvis/mcp/: __init__.py  client.py
jarvis/memory/: __init__.py  obsidian.py  session.py
jarvis/transport/: __init__.py  pipeline.py  stt.py  tts.py
tests/: test_phase1_backbone.py  test_phase2_browser.py  test_phase3_supervisor.py  test_phase4_mcp.py
