[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarvis"
version = "2.0.0"
description = "J.A.R.V.I.S -- Open-source voice-controlled multi-agent AI framework powered by OpenClaw"
requires-python = ">=3.11"

dependencies = [
    # -- Core orchestration --
    "langgraph>=0.2",
    "langchain>=0.2",
    "langchain-openai>=0.1",
    "langchain-google-genai>=2.0",
    "langchain-anthropic>=0.3",

    # -- STT (server-side Whisper for WebSocket audio) --
    "faster-whisper>=1.0",
    "numpy>=1.26",
    "imageio-ffmpeg>=0.5",

    # -- TTS (Kokoro local neural voice) --
    "kokoro>=0.9",
    "soundfile>=0.12",

    # -- Browser agent --
    "browser-use>=0.1",
    "playwright>=1.44",

    # -- OS agent --
    "pyautogui>=0.9.54",
    "pillow>=10.0",
    "pywin32>=306",

    # -- MCP --
    "mcp>=1.0",

    # -- Web dashboard --
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",

    # -- Memory & Obsidian --
    "watchdog>=4.0",
    "aiosqlite>=0.20",

    # -- Utilities --
    "python-dotenv>=1.0",
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.scripts]
jarvis = "jarvis.main:run"

[tool.hatch.build.targets.wheel]
packages = ["jarvis"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-timeout>=2.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 180
